--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,9 +1,30 @@
+.app-container{
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
 footer{
-  background: azure;
+  flex-shrink: 0;
+  background: #7d8282;
   padding: 20px;
+  color: #fff;
+  p{
+    margin: 0;
+  }
+}
+header{
+  flex-shrink: 0;
 }
 main{
+  flex-grow: 1;
   padding: 20px 0;
+  position: relative;
+}
+.spinner-absolute-center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate( -50%, -50%);
 }
 .item-field-card{
   min-height: 150px;
@@ -19,6 +40,9 @@ main{
   border-radius: 0.25rem;
   .item-field-card__image{
     width: 100%;
+    height: 150px;
+    object-fit: cover;
+    object-position: center;
     border-top-left-radius: calc(0.25rem - 1px);
     border-top-right-radius: calc(0.25rem - 1px);
   }
